--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_ENV=production
+APP_KEY=base64:r3IH22Pf4hNQQg3ujOPOtd3G7xnDyygnQdBEWVI7nnI=
+APP_DEBUG=false
+APP_URL=http://text.uscannenbergmedia.com
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=text_alerts
 DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_PASSWORD=''
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,21 +24,18 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.sendgrid.net
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=''
+MAIL_ENCRYPTION=tls
+MAIL_FROM_NAME="USC Annenberg Media"
+MAIL_FROM_ADDRESS='annmedia@usc.edu'
+
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
